fix: modify navigation and testimonials spacing

--- a/src/app/[lng]/components/Navigation/Navigation.module.scss
+++ b/src/app/[lng]/components/Navigation/Navigation.module.scss
@@ -122,6 +122,7 @@
 .navigation__mobile_menu_trigger {
   position: absolute;
   inset-inline-end: 20px;
+  inset-block-start: 35px;
 }
 
 .navigation__mobile_menu_container.active {
